--- a/KTU-SA-WEB/index.html
+++ b/KTU-SA-WEB/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/KTU_SA_Logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://fienta.com/embed.js"></script> 
     <title>KTU Studentų atstovybė</title>
   </head>
   <body>
