--- a/KTU-SA-WEB/index.html
+++ b/KTU-SA-WEB/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/KTU_SA_Logo.png" />
+    <link rel="icon" href="/KTU_SA_Logo.svg" sizes="any" type="image/svg+xml">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://fienta.com/embed.js"></script> 
     <title>KTU Studentų atstovybė</title>
